--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,23 @@ concurrency:
 
 env:
   # Path format pulled from https://github.com/actions/runner-images/blob/main/images/macos/macos-14-Readme.md#xcode
-  DEVELOPER_DIR: /Applications/Xcode_15.4.app
+  XCODE_15: /Applications/Xcode_15.4.app
+  XCODE_16: /Applications/Xcode_16_beta_6.app
+  DEVELOPER_DIR: ${{ env.XCODE_15 }}
 
 jobs:
   build_and_test:
     name: Build and Test
-
     timeout-minutes: 20
-
     runs-on: macos-14-xlarge
-
     env:
       FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 7
+
+    strategy:
+      matrix:
+        env:
+          - DEVELOPER_DIR: ${{ env.XCODE_15 }}
+          - DEVELOPER_DIR: ${{ env.XCODE_16 }}
 
     steps:
       - uses: actions/checkout@v4
