--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ concurrency:
 
 env:
   # Path format pulled from https://github.com/actions/runner-images/blob/main/images/macos/macos-14-Readme.md#xcode
-  XCODE_15: /Applications/Xcode_15.4.app
-  XCODE_16: /Applications/Xcode_16_beta_6.app
-  DEVELOPER_DIR: ${{ env.XCODE_15 }}
+  DEVELOPER_DIR: /Applications/Xcode_15.4.app
 
 jobs:
   build_and_test:
@@ -32,13 +30,13 @@ jobs:
 
     strategy:
       matrix:
-        env:
-          - DEVELOPER_DIR: ${{ env.XCODE_15 }}
-          - DEVELOPER_DIR: ${{ env.XCODE_16 }}
+        xcode: ["15.4", "16_beta_6"]
 
     steps:
+      - name: Set Xcode version
+        run: |
+          echo DEVELOPER_DIR=/Applications/Xcode_${{matrix.xcode}}.app >> "$GITHUB_ENV"
       - uses: actions/checkout@v4
-
       - uses: ./.github/actions/clone-everything
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
