--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
             --output_types junit \
             --skip_package_dependencies_resolution \
             --disable_package_automatic_updates \
-            --xcargs '-test-timeouts-enabled YES -maximum-test-execution-time-allowance 60' \
+            --xcargs '-test-timeouts-enabled YES -maximum-test-execution-time-allowance 300 -default-test-execution-time-allowance 60' \
             || formatFailures
 
       - name: Upload build logs
